<resources>
    <string name="app_name">Register2.0</string>
    <string name="HyperLink"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeajdcqOG67paf-w3MIfQo1Tg83bUHOY8dx1xQwGyj7IkuOFA/viewform?usp=sf_link">Terminos y Condiciones </a></string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="telefono">Telefono</string>
    <string name="password">Password</string>
    <string name="Nombre">Nombre</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>
    <string name="Email">Email</string>
    <string name="Telefono">Telefono</string>
    <string name="Password">Password</string>
</resources>